# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX

## [12.65.0] -- 2023-06-21
* Spring Boot Version erhöhen auf 3.1.1
* Extensions können nun ServiceProperties über das dazugehörige Interface ServicePropertiesRepo abfragen.
* In der Table xtcasCASServices wurde die Spalte ServiceURL von 50 auf 250 Zeichen erhöht.

## [12.65.0] -- 2023-06-21
* QueueService auf JPA umstellen.
* Erweitern des QueueService um BasicAuth und OAuth2.

## [12.64.2] -- 2023-06-20
* JOOQViewService ignoriert Cases -> Bei Privilegienprüfung ist Case egal
* Extensions werden ausgeführt, egal ob Cases der Namen zusammenpassen
* mr-smithers-excellent Release Workflow für Releases verwenden.
* Basis-Test für ViewServiceInterface-Implementierungen

## [12.64.1] -- 2023-06-15
* In CAS Prozeduren die Last* Spalten fühlen, um Truncated Fehler auf Azure zu vermeiden.
* Helper-Version in Manifest an Helper-pom anpassen.
* Gemeinsame GitHub Workflows aus https://github.com/minova-afis/aero.minova.os.github.workflows verwenden.
* JOOQViewService kann nun mit 'OR'-Fällen umgehen. Vorher konnte er Queries nur mit 'AND' verbinden.

## [12.64.0] -- 2023-06-14
* Testrelease mit neuem Workflow

## [12.63.10] -- 2023-06-05
* Helper-Manifest ausbessern

## [12.63.9] -- 2023-06-02
* Workflow ReleaseAppAndHelper veröffentlicht die Dockerfile auf Docker.io

## [12.63.8] -- 2023-06-02
* Helper Version Updaten
* Workflow ReleaseAppAndHelper korrigiert
* Tycho-Version im Client auf 3.0.4 erhöhen

## [12.63.7] -- 2023-06-02
* Abschneiden von Daten beim Setup direkt in der Methode processSqlProcedureRequest erlauben

## [12.63.1 - 12.63.6] -- 2023-06-01
* Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)

## [12.63.0] -- 2023-05-26
* In CAS Prozeduren die Last* Spalten füllen, um Truncated Fehler auf Azure zu vermeiden