@@ -4,6 +4,7 @@ Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.
 Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].
 
 ## [UNRELEASED] -- XXXX-XX-XX
+* Login erweitern über Value aero.minova.cas.setup.logging. 
 
 ## [12.65.0] -- 2023-06-21
 * Spring Boot Version erhöhen auf 3.1.1
